--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -13,6 +13,8 @@
 	</head>
 	<body>
 		<div id="quote-container" class="quote-container">
+			<h2>Quotes of the Day</h2>
+			<hr />
 			<div class="quote-text">
 				<i class="fas fa-quote-left"></i>
 				<span id="quote"
