--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -28,6 +28,7 @@
 			<button id="new-button">New Quote</button>
 		</div>
 	</div>
+	<div class="loader" id="loader"></div>
 	<script src="script.js"></script>
 </body>
 
